Added garbage collector
