# lib/rest-api.js
@@ -84,6 +84,7 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
     this.checkInterval = null;
     this.extension  = !!instanceSettings;
     this.routerPrefix = this.extension ? '/swagger/' : '/';
+    this.gcInterval = null;
 
     this.adapter.config.defaultUser = this.extension ? this.config.defaultUser : this.adapter.config.defaultUser || 'system.user.admin';
 
@@ -163,7 +164,7 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
         }
     }
 
-    async function validateHook(item) {
+    async function _validateUrlHook(item) {
         try {
             await axios.post(item.urlHook, {test: true}, {
                 timeout: that.adapter.config.hookTimeout,
@@ -189,8 +190,8 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
 
     async function reportChange(item, data) {
         if (item.polling) {
-            if (that.polling[item.urlHook]) {
-                that.polling[item.urlHook].resolve(JSON.stringify(data));
+            if (item.promise) {
+                item.promise.resolve(JSON.stringify(data));
             } else {
                 item.queue = item.queue || [];
                 const now = Date.now();
@@ -199,7 +200,8 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
                 // delete too old entries
                 for (let d = item.queue.length - 1; d >= 0; d--) {
                     if (now - item.queue[d].ts > 3000) {
-                        that.adapter.log.debug(`Data update to ${item.urlHook} skipped, as no handler (${d + 1})`);
+                        const urlHash = crypto.createHash('md5').update(item.urlHook).digest('hex');
+                        that.adapter.log.debug(`[${item.urlHook}] Data update skipped, as no handler (${d + 1})`);
                         item.queue.splice(0, d);
                         break;
                     }
@@ -232,30 +234,73 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
         const hooks = Object.keys(this.subscribes);
         for (let i = 0; i < hooks.length; i++) {
             if (!this.subscribes[hooks[i]].polling) {
-                await validateHook(this.subscribes[hooks[i]]);
+                await _validateUrlHook(this.subscribes[hooks[i]]);
             }
         }
+    }
+
+    this._executeGC = () => {
+        const hashes = Object.keys(this.subscribes)
+            .filter(urlHash => this.subscribes[urlHash].polling);
+
+        if (!hashes.length) {
+            clearInterval(this.gcInterval);
+            this.gcInterval = null;
+        } else {
+            const now = Date.now();
+            hashes.forEach(async urlHash => {
+                // kill all subscriptions after 2 minutes
+                if (now - this.subscribes[urlHash].ts > this.subscribes[urlHash].timeout * 2) {
+                    if (this.subscribes[urlHash].promise) {
+                        debugger;
+                        // this should never happen
+                        this.subscribes[urlHash].promise.resolve();
+                    }
+                    // unsubscribe
+                    for (let i = 0; i < this.subscribes[urlHash].state.length; i++) {
+                        this.adapter.log.debug(`[${this.subscribes[urlHash].urlHook}] unsubscribe from state: ${this.subscribes[urlHash].state[i].id}`);
+                        await this.adapter.unsubscribeForeignStatesAsync(this.subscribes[urlHash].state[i].id);
+                    }
+                    for (let i = 0; i < this.subscribes[urlHash].object.length; i++) {
+                        this.adapter.log.debug(`[${this.subscribes[urlHash].urlHook}] unsubscribe from object: ${this.subscribes[urlHash].object[i].id}`);
+                        await this.adapter.unsubscribeForeignObjectsAsync(this.subscribes[urlHash].object[i].id);
+                    }
+
+                    this.adapter.log.debug(`[${this.subscribes[urlHash].urlHook}] Destroy connection due inactivity`);
+
+                    delete this.subscribes[urlHash];
+                }
+            });
+        }
+    };
+
+    this.startGC = () => {
+        this.gcInterval = this.gcInterval || setInterval(() => this._executeGC(), 30000);
     }
 
     this.registerSubscribe = async (urlHook, id, type, user, method) => {
         const urlHash = crypto.createHash('md5').update(urlHook).digest('hex');
         if (!this.subscribes[urlHash]) {
             if (method !== 'polling') {
-                const error = await validateHook({urlHook});
+                const error = await _validateUrlHook({urlHook});
                 if (error) {
                     return `No valid answer from URL hook: ${error}`;
                 }
             }
+            if (method === 'polling') {
+                this.adapter.log.debug(`[${urlHook}] Subscribe on connection`);
+                this.startGC();
+            }
 
-            this.subscribes[urlHash] = {state: [], object: [], urlHook, polling: method === 'polling'};
+            this.subscribes[urlHash] = {state: [], object: [], urlHook, polling: method === 'polling', ts: Date.now()};
         }
-        if (!this.subscribes[urlHash][type].find(item => item.id === id && !method )) {
-            this.subscribes[urlHash][type].push({id, method});
+        if (!this.subscribes[urlHash][type].find(item => item.id === id && (!item.method || item.method === method))) {
+            this.subscribes[urlHash][type].push({id});
             if (type === 'state') {
-                this.adapter.log.debug(`Subscribe on state "${id}"`);
+                this.adapter.log.debug(`[${urlHook}] Subscribe on state "${id}"`);
                 await this.adapter.subscribeForeignStatesAsync(id, {user});
             } else {
-                this.adapter.log.debug(`Subscribe on object "${id}"`);
+                this.adapter.log.debug(`[${urlHook}] Subscribe on object "${id}"`);
                 await this.adapter.subscribeForeignObjectsAsync(id, {user});
             }
         }
@@ -396,33 +441,47 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
         });
     });
 
-    this.polling = {};
-
     this.app.get(this.routerPrefix + 'v1/polling', (req, res, next) => {
         res.writeHead(200, {'Content-Type': 'text/plain'});
-        const ip = req.headers['x-forwarded-for'] || req.socket.remoteAddress;
+        let ip = req.headers['x-forwarded-for'] || req.socket.remoteAddress;
+        if (req.query.sid) {
+            ip += '_' + req.query.sid;
+        }
         const urlHash = crypto.createHash('md5').update(ip).digest('hex');
-        const item = this.subscribes[urlHash];
+
+        let item = this.subscribes[urlHash];
+
+        this.startGC();
 
         if (req.query.check === 'true') {
             if (!item) {
-                this.subscribes[urlHash] = {state: [], object: [], urlHook: ip, polling: true, timeout: parseInt(req.query.timeout, 10) || 30000};
+                this.adapter.log.debug(`[${ip}] Initiate connection`);
+                this.subscribes[urlHash] = {state: [], object: [], urlHook: ip, polling: true, timeout: parseInt(req.query.timeout, 10) || 30000, ts: Date.now()};
+                item = this.subscribes[urlHash];
             } else if (req.query.timeout) {
-                this.subscribes[urlHash].timeout = parseInt(req.query.timeout, 10);
+                item.timeout = parseInt(req.query.timeout, 10);
             }
-            if (this.subscribes[urlHash].timeout < 1000) {
-                this.subscribes[urlHash].timeout = 1000;
+            if (item.timeout < 1000) {
+                item.timeout = 1000;
+            } else
+            if (item.timeout > 60000) {
+                item.timeout = 60000;
             }
             return res.end('_');
+        } else if (!item) {
+            this.subscribes[urlHash] = {state: [], object: [], urlHook: ip, polling: true, timeout: parseInt(req.query.timeout, 10) || 30000, ts: Date.now()};
+            item = this.subscribes[urlHash];
+        } else {
+            item.ts = Date.now();
         }
 
         // If some data wait to be sent
-        if (item && item.queue && item.queue.length) {
+        if (item.queue && item.queue.length) {
             // delete too old entries
             const now = Date.now();
             for (let d = item.queue.length - 1; d >= 0; d--) {
                 if (now - item.queue[d].ts > 3000) {
-                    that.adapter.log.debug(`Data update to ${item.urlHook} skipped, as no handler (${d + 1})`);
+                    that.adapter.log.debug(`[${item.urlHook}] Data update  was too old and ignored`);
                     item.queue.splice(0, d);
                     break;
                 }
@@ -435,30 +494,43 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
         }
 
         new Promise(resolve => {
-            this.polling[ip] = {resolve, ts: setTimeout(() => {
-                    this.polling[ip].ts = null;
+            item.promise = {
+                resolve,
+                ts: setTimeout(() => {
+                    item.promise.ts = null;
                     resolve();
-                }, this.subscribes[urlHash] ? this.subscribes[urlHash].timeout : 30000)};
+                }, item ? item.timeout : 30000)};
         })
             .then(data => {
-                this.polling[ip].ts && clearTimeout(this.polling[ip].ts);
-                this.polling[ip].ts = null;
-                this.polling[ip].resolve = null;
-                this.polling[ip] = null;
+                if (item.promise) {
+                    item.promise.ts && clearTimeout(item.promise.ts);
+                    item.promise.ts = null;
+                    item.promise.resolve = null;
+                    item.promise = null;
+                } else {
+                    debugger;
+                }
                 res.end(data);
             });
 
         req.on('error', error => {
-            this.polling[ip].ts && clearTimeout(this.polling[ip].ts);
-            this.polling[ip].ts = null;
-            this.polling[ip].resolve = null;
-            this.polling[ip] = null;
+            if (!error.message.includes('aborted')) {
+                this.adapter.log.warn(`[${item && item.urlHook}]Error in polling connection: ${error}`);
+            }
+            if (item.promise) {
+                item.promise.ts && clearTimeout(item.promise.ts);
+                item.promise.ts = null;
+                item.promise.resolve = null;
+                item.promise = null;
+            }
         });
     });
 
     this.unload = async () => {
         this.checkInterval && clearInterval(this.checkInterval);
         this.checkInterval = null;
+        this.gcInterval && clearInterval(this.gcInterval);
+        this.gcInterval = null;
         // send to all hooks, disconnect event
 
         const hooks = Object.keys(this.subscribes);
@@ -489,13 +561,25 @@ function SwaggerUI(server, webSettings, adapter, instanceSettings, app, callback
         appRoot: __dirname,
     };
 
+    // create swagger.yaml copy with changed basePath
     if (this.extension) {
         _options.swaggerFile = __dirname + '/api/swagger/swagger_extension.yaml';
+
         let file = fs.readFileSync(__dirname + '/api/swagger/swagger.yaml').toString('utf8')
         file = file.replace('basePath: "/v1"', 'basePath: "/rest/v1"');
         if (!fs.existsSync(_options.swaggerFile) || fs.readFileSync(_options.swaggerFile).toString('utf8') !== file) {
             fs.writeFileSync(_options.swaggerFile, file);
         }
+    }
+
+    // read default history
+    if (!this.adapter.config.dataSource) {
+        this.adapter.getForeignObjectAsync('system.config')
+            .then(obj => {
+                if (obj && obj.common && obj.common.defaultHistory) {
+                    this.adapter.config.dataSource = obj.common.defaultHistory;
+                }
+            });
     }
 
     SwaggerRunner.create(_options, (err, swaggerRunner) => {
